--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
+/target
 dependency-reduced-pom.xml
-buildNumber.properties
+.classpath
+tmp/
+/target
+/target
