--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.galeb</groupId>
-  <artifactId>galeb-router</artifactId>
+  <artifactId>galeb-metrics</artifactId>
   <version>3.0.0-SNAPSHOT</version>
 
   <licenses>
@@ -14,7 +14,6 @@
   </licenses>
 
   <properties>
-    <org.jboss.resteasy.version>3.0.10.Final</org.jboss.resteasy.version>
     <org.mortbay.jetty.alpn.jdk7.version>7.1.2.v20141202</org.mortbay.jetty.alpn.jdk7.version>
     <org.mortbay.jetty.alpn.jdk8.version>8.1.2.v20141202</org.mortbay.jetty.alpn.jdk8.version>
     <google.gson.version>2.3.1</google.gson.version>
@@ -22,7 +21,6 @@
     <org.jboss.logging.version>3.2.0.Final</org.jboss.logging.version>
     <org.apache.logging.log4j.version>2.1</org.apache.logging.log4j.version>
     <org.apache.commons.commons-lang3.version>3.3.2</org.apache.commons.commons-lang3.version>
-    <org.quartz-scheduler.version>2.2.1</org.quartz-scheduler.version>
   </properties>
 
   <profiles>
@@ -95,16 +93,6 @@
       <version>${org.apache.logging.log4j.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.quartz-scheduler</groupId>
-      <artifactId>quartz</artifactId>
-      <version>${org.quartz-scheduler.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.quartz-scheduler</groupId>
-      <artifactId>quartz-jobs</artifactId>
-      <version>${org.quartz-scheduler.version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <version>${org.apache.logging.log4j.version}</version>
@@ -143,7 +131,7 @@
         <configuration>
         <archive>
           <manifest>
-            <mainClass>io.galeb.services.router.Starter</mainClass>
+            <mainClass>io.galeb.services.metrics.Starter</mainClass>
             <addClasspath>true</addClasspath>
           </manifest>
         </archive>
@@ -156,17 +144,11 @@
         <configuration>
           <executable>java</executable>
           <arguments>
-            <argument>-Xdebug</argument>
-            <!--
-            <argument>-Xrunjdwp:transport=dt_socket,address=3000,server=y,suspend=y</argument>
-            -->
             <argument>-server</argument>
             <argument>-Xms1024m</argument>
             <argument>-Xmx1024m</argument>
             <argument>-Dlog4j.configurationFile=log4j.xml</argument>
             <argument>-Dhazelcast.config=hazelcast.xml</argument>
-            <argument>-Dio.galeb.router.port=8080</argument>
-            <argument>-Dio.galeb.router.maxConn=300</argument>
             <argument>-jar</argument>
             <argument>target/galeb-${project.version}-uber.jar</argument>
           </arguments>
@@ -196,6 +178,7 @@
         </plugins>
     </pluginManagement>
   </build>
+
   <reporting>
     <plugins>
         <plugin>
@@ -210,6 +193,5 @@
         </plugin>
     </plugins>
   </reporting>
-
 </project>
 
